--- a/photos/2023-02-24/index.html
+++ b/photos/2023-02-24/index.html
@@ -2,7 +2,7 @@
 <html><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>[Glog]7點的起床 · KAHOSENSE</title>
+<title>7點的起床 · KAHOSENSE</title>
 
 
 
@@ -13,7 +13,7 @@
 <body>
     <header><h2>
   
-    <a href="http://localhost:1313/">‹ KAHOSENSE</a>
+    <a href="http://719.hilouis.com">‹ KAHOSENSE</a>
   
 </h2>
 </header>
@@ -41,7 +41,7 @@
     <div class="album">
         <div class="title-group">
             <div class="title">
-                <h1>[Glog]7點的起床</h1>
+                <h1>7點的起床</h1>
             </div>
                 <div class="date"><h5>2023-02-24</h5></div><div class="location"><h5>廣州，麥當勞</h5></div>
             
