--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@
 <body>
     <header><h2>
   
-    <a href="http://localhost:1313/">‹ KAHOSENSE</a>
+    <a href="http://719.hilouis.com">‹ KAHOSENSE</a>
   
 </h2>
 </header>
