--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     </div class="title-group">
 
     <div class="content">
-        <p><img src="https://raw.githubusercontent.com/kahosense/kahosense.github.io/master/images/R0000003.jpeg" alt=""></p>
-<p><img src="https://raw.githubusercontent.com/kahosense/kahosense.github.io/master/images/R0000002.jpeg" alt="">
+        <p><img src="https://raw.githubusercontent.com/kahosense/kahosense.github.io/master/images/R0000003.jpeg" alt="">
+<img src="https://raw.githubusercontent.com/kahosense/kahosense.github.io/main/images/R0000002.jpeg" alt="">
 在突破程式代碼的難題後，終於成功搭建了屬於自己的博客。</p>
 <p>懷念小時候寫博客的時光，有一個自己小小的地方，不會被打擾，也無需在社交平台刻意曝光自己的生活點滴。我只需要有一個小小的地方，想更多瞭解我的人會常來，而不熟悉我的也不會在意，這里是我給自己的「朋友圈」。</p>
         
