--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div class="title-group">
 
     <div class="content">
-        <p><img src="https://raw.githubusercontent.com/kahosense/kahosense.github.io/main/images/20230302113300.png" alt=""></p>
+        <p><img src="https://719-1251425743.cos.ap-guangzhou.myqcloud.com/blog/20230306110735.png" alt="image.png"></p>
 <p>相隔超過10年，購入了人生第二台數碼相機，RICOH GRIIIx（第一台同樣是RICOH）。</p>
         
     </div>
