--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div class="content">
         <p><img src="https://719-1251425743.cos.ap-guangzhou.myqcloud.com/blog/20230306110735.png" alt="image.png"></p>
-<p>相隔超過10年，購入了人生第二台數碼相機，RICOH GRIIIx（第一台同樣是RICOH）。</p>
+<p>相隔超過10年，購入了人生的第二台數碼相機，RICOH GRIIIx（第一台同樣是RICOH）。</p>
         
     </div>
     
