--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     </div class="title-group">
 
     <div class="content">
-        <p><img src="https://719-1251425743.cos.ap-guangzhou.myqcloud.com/blog/7C3DEF95-205B-41A7-BADD-74EB09578D66_1_105_c.jpeg" alt="7C3DEF95-205B-41A7-BADD-74EB09578D66_1_105_c.jpeg"></p>
+        <p><img src="https://719-1251425743.cos.ap-guangzhou.myqcloud.com/blog/79B14964-0A9F-4634-9124-2646734C2E37_1_102_a.jpeg" alt="79B14964-0A9F-4634-9124-2646734C2E37_1_102_a.jpeg"></p>
 <blockquote>
-<p>我們都只是與每個人擦身而過，很多時候就沒有「之後」了。</p>
+<p>我們都只是與每個人擦身而過，很多時候是沒有「之後」的。</p>
 </blockquote>
         
     </div>
