--- a/404.html
+++ b/404.html
@@ -13,16 +13,17 @@
 <body>
     <header><h2>
   
-    <a href="http://719.hilouis.com">‹ KAHOSENSE</a>
+    <a href="https://kahosense.github.io/">‹ KAHOSENSE</a>
   
 </h2>
-</header>
+<script src="https://unpkg.com/@lyket/widget@latest/dist/lyket.js?apiKey=pt_48b4e07846ca68ef82453d24e52305"></script></header>
     <main>
 <h1>404: Page not found</h1>
 <p>Why are you here? Who sent you? It's probably your fault anyway. Go back!</p>
 
     </main>
-    <footer></footer>
+    <footer>
+</footer>
     
     <script>
       const emailId = atob("ZW1haWxAZXhhbXBsZS5jb20=");
